--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,8 +8,8 @@ website:
   navbar:
     background: "#702b84"
     left:
-      - href: index.qmd
-        text: Home
+      #- href: index.qmd
+       # text: Home
       - text: Demographics
         menu:
           - href: Practice.qmd
